<resources>
    <string name="app_name">CovidApp</string>
    <string name="app_title">Covid App at Universities</string>
    <string name="splash_title_first">ovid</string>
    <string name="splash_title_next">App</string>
    <string name="splash_subtitle">Covid App @ Universities</string>
    <string name="main_title">All Set! &#129303; </string>
    <string name="if_you_got_close">Remember to leave your Bluetooth and Location on,
        and we\'ll do the rest. </string>
    <string name="how_it_works">How it works &#129300; </string>
    <string name="how_it_works_no_emoji">How it works</string>
    <string name="show_id">View code</string>
    <string name="read_more">More information</string>
    <string name="update_status">Report Status</string>
    <string name="privacy_setting">Set Privacy Level</string>
    <string name="share_location">Share Location</string>
    <string name="your_id_is">Your identification code is:\n</string>
    <string name="id_explaination">This code can be asked by your doctor to anonymously notify
        people at risk.</string>
    <string name="status_normal">No risk detected</string>
    <string name="status_infected">Infected</string>
    <string name="status_healed">Healed</string>
    <string name="status_suspect">Suspected</string>
    <string name="status_lowrisk">Low risk detected</string>
    <string name="status_mediumrisk">Medium risk detected</string>
    <string name="status_highrisk">High risk detected</string>
    <string name="title_normal">No risk detected</string>
    <string name="title_infected"><![CDATA[
    <font color=\'#333333\'>You tested positive to </font><font color=\'#E20A19\'>Coronavirus.</font>
    ]]></string>
    <string name="title_healed">You are healed!</string>
    <string name="title_suspect">You are a suspected Coronavirus case.</string>
    <string name="title_lowrisk">Low risk detected</string>
    <string name="title_mediumrisk">Medium risk detected</string>
    <string name="title_highrisk">High risk detected</string>
    <string name="dont_panic"><b>Don\'t panic.</b></string>
    <string name="call_emergency"><b>Please call your doctor immediately if you start showing any symptoms.</b></string>
    <string name="description_normal">You haven\'t been near any infected person.</string>
    <string name="description_infected">You tested positive to Coronavirus. We recommend you to follow your doctor\'s instructions.</string>
    <string name="description_healed">You made it! You\'re safe now.</string>
    <string name="description_suspect">You have been near to someone who has tested positive to Coronavirus. You should self-quarantine at home.</string>
    <string name="description_lowrisk">
        You have been near a Suspected Coronavirus case.
        You should self quarantine at home.</string>
    <string name="description_mediumrisk">
        You have been near to someone who has tested positive to Coronavirus for a short period of time.
        You should self quarantine at home.</string>
    <string name="description_highrisk">
        You have been near to someone that has tested positive to Coronavirus.
        You should self quarantine at home.</string>
    <string name="bt_confirm_covid">&#129298;\ \ \ \ Positive to COVID-19</string>
    <string name="bt_negative_covid">&#128521;\ \ \ \ Negative to COVID-19</string>
    <string name="bt_recover_covid">&#128522;\ \ \ \ Healed</string>
    <string name="bt_other_status_covid">Other</string>
    <string name="toast_click_status_changed">Changing the patient\'s status...</string>
    <string name="aldiag_title_change_status">Patient Health Status</string>
    <string name="aldiag_err_updatestatus_title">Error: Patient Status Update</string>
    <string name="aldiag_status_changed">Health status changed to %s</string>
    <string name="aldiag_no_resp_change_status">Error, please check and enable Internet</string>
    <string name="aldiag_err_status_change">Error, please change status again</string>
    <string name="status_negative">Negative</string>
    <string name="welcome"><![CDATA[
    Welcome to <br/><font color=\'#FF6F61\'>Covid App</font><br/> at universities.;
    ]]> </string>
    <string name="together_we">Together we can save lives and help people keep their jobs. </string>
    <string name="let_s_get_s">LET\'S GET STARTED!</string>
    <string name="text_progbar">Register device…</string>
    <string name="toast_error_regdev">Error, please click button again</string>
    <string name="we_need_you_blueto">We use the Bluetooth signal to anonymously detect nearby devices,
        and the duration for which the devices have been interacting for.\n<b>It\'s anonymous!</b></string>
    <string name="give_blueto">TURN ON BLUETOOTH</string>
    <string name="location">Distance Monitoring</string>
    <string name="we_need_you_loc">We will use Distance Monitoring to approximate
        more precisely your interactions.\n<b>It\'s anonymous!</b></string>
    <string name="give_loc">GIVE PERMISSION</string>
    <string name="help_community">Help your Community</string>
    <string name="we_need_you_dist">To help doctors and the research community in this crisis,
        you can choose to <b>anonymously</b> send your Position.\nThis is not mandatory,
        and you decide whether or not to share your location.</string>
    <string name="give_dist">SHARE LOCATION</string>
    <string name="no_dist">NOT RIGHT NOW</string>
    <string name="all_set">All Set! </string>
    <string name="we_need_you_notif">If you have been close to an infected person in the past
        two weeks, we will notify you.</string>
    <string name="by_clicking">By continuing and clicking on "Accept and Continue",
        you agree to our \ </string>
    <string name="tos">Terms and Conditions and Privacy Policy.</string>
    <string name="give_notif">ACCEPT AND CONTINUE!</string>
    <string name="how_it_works_p0">We use the Bluetooth signal to anonymously detect the devices
        that get closer than 2 meters to you,
    and the time the two devices have interacted for.</string>
    <string name="how_it_works_q2">How do we maintain your anonymity?</string>
    <string name="how_it_works_p2">We only save the interactions between your phone and other
        devices, and how long they lasted for. We do not store any personal information or location
        history.</string>
    <string name="how_it_works_q1">How do we keep you safe?</string>
    <string name="how_it_works_p1">If a person you interacted with in the past 14 days is diagnosed with
        Coronavirus, you will be notified.</string>
    <string name="how_it_works_q3">How do we know who\'s sick?</string>
    <string name="how_it_works_p3">Only professional medical staff can diagnose if a patient is
        positive to the virus. In that case, the doctor will scan the patient\'s QR code and notify
        the people that are at risk because they have interacted with the infected patient.
    </string>
    <string name="how_it_works_q4">What happens if you receive a notification that you could be
        at risk?</string>
    <string name="how_it_works_p4">First of all, don\'t panic:
        \nIt means that you have interacted with someone that has tested positive or is
        suspected.\nYou will receive precise instructions from the virologist.</string>
    <string name="how_it_works_q5">What can you do to help?</string>
    <string name="how_it_works_p5">Just leave this app running in the background, and we\'ll do
        the rest.\nIf you want to help us, share this app with your loved ones to keep them safe.
    </string>
    <string name="help_us_title">Help us protect you and your loved ones.</string>
    <string name="share_app_title">Share it on:</string>
    <string name="share_app_subtitle">The more people have this app,
        the safer you will be and the faster we can react to stop the virus.</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="twitter">Twitter</string>
    <string name="linkedin">LinkedIn</string>
    <string name="messenger">Messenger</string>
    <string name="sms">SMS</string>
    <string name="email">E-mail</string>
    <string name="link">Copy link</string>
    <string name="other">Other</string>
    <string name="blue_disabled">Bluetooth Disabled</string>
    <string name="blue_please_en">Please, enable Bluetooth </string>
    <string name="loc_disabled">Location Disabled </string>
    <string name="loc_please_en">Please, enable Location because App requires it to interact with Bluetooth</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="blue_notsupported">Bluetooth LE not available</string>
    <string name="blue_msg_notsupported">Sorry, this device does not support Bluetooth LE</string>
    <string name="cancel">CANCEL</string>
    <string name="step_1_of_3">Step 1 of 3 </string>
    <string name="step_2_of_3">Step 2 of 3 </string>
    <string name="step_3_of_3">Step 3 of 3 </string>
    <string name="skip_step">SKIP THIS STEP </string>
    <string name="status">STATUS</string>
    <string name="app_status">APP STATUS</string>
    <string name="user_status">USER STATUS</string>
    <string name="status_active">Active</string>
    <string name="status_inactive">Inactive</string>
    <string name="n_interactions">DEVICES DETECTED</string>
    <string name="n_interactions_value">0</string>
    <string name="qr_code">QR Code</string>
    <string name="alert_exit_title">Exit</string>
    <string name="alert_exit_msg">Do you want to exit?</string>
    <string name="alert_exit_pos_bt">Yes</string>
    <string name="alert_exit_neg_bt">No</string>
    <string name="permanent_notification">Status: %s - %s </string>
    <string name="notification_appstatus_title">App Status is Inactive:</string>
    <string name="notification_appstatus_msg">Please, check your permissions in the App.</string>
    <string name="bt_enable_mon">Re-Enable Monitoring </string>
    <string name="bt_disable_mon">Disable Monitoring </string>
    <string name="notification_channel_firebase_id" translatable="false">STATUS_UPDATE</string>
    <string name="notification_channel_firebase_name" translatable="false">Status update</string>
    <string name="notification_channel_firebase_description" translatable="false">Notifications about your health</string>
    <string name="notification_channel_permission_id" translatable="false">notification_channel_permission_id</string>
    <string name="notification_channel_permission_name" translatable="false">Permissions notifications</string>
    <string name="notification_channel_permission_description" translatable="false">Notifications about your health</string>
</resources>