<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

<!--    &lt;!&ndash; illustration_bluetooth &ndash;&gt;
    <ImageView
        style="@style/background_image"
        android:id="@+id/logo_id"
        android:layout_marginBottom="-350dp"
        android:layout_marginTop="400dp"
        android:src="@drawable/ic_radar" />-->

    <!-- Step 3 of 3 -->
    <TextView
        style="@style/steps_text"
        android:id="@+id/step_3_of_3"
        android:text="@string/step_3_of_3" />

    <!-- Title -->
    <TextView
        style="@style/intro_title"
        android:id="@+id/distance"
        android:text="@string/help_community"
        android:layout_below="@id/step_3_of_3"/>


    <!-- To monitor more accurately your interactions we will
    ask you permission to use Location. It's anonymous. -->
    <TextView
        style="@style/intro_subtitle"
        android:id="@+id/we_need_you_loc"
        android:text="@string/we_need_you_dist"
        android:layout_below="@id/distance"/>

    <!-- BUTTON -->
    <Button style="@style/button_primary"
        android:shadowColor="@color/white"
        android:id="@+id/button_next"
        android:text="@string/give_dist" />

    <!-- UNDERBUTTON -->
    <Button style="@style/underbutton"
        android:id="@+id/button_skip"
        android:text="@string/no_dist" />

</RelativeLayout>