<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <!-- illustration_bluetooth -->
    <ImageView
        style="@style/background_image"
        android:id="@+id/logo_id"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="-50dp"
        android:src="@drawable/ic_illustration_bluetooth" />

    <!-- Step 1 of 3 -->
    <TextView
        style="@style/steps_text"
        android:id="@+id/step_1_of_3"
        android:text="@string/step_1_of_3" />

    <!-- Bluetooth -->
    <TextView
        style="@style/intro_title"
        android:id="@+id/bluetooth"
        android:text="@string/bluetooth"
        android:layout_below="@id/step_1_of_3"/>

    <!-- We need your permission to use Bluetooth to monitor
    your distance from other devices. It's anonymous. -->
    <TextView
        style="@style/intro_subtitle"
        android:id="@+id/we_need_you"
        android:text="@string/we_need_you_blueto"
        android:layout_below="@id/bluetooth"/>

    <!-- BUTTON -->
    <Button style="@style/button_primary"
        android:shadowColor="@color/white"
        android:id="@+id/button_next"
        android:text="@string/give_blueto" />


    <!-- UNDERBUTTON -->
    <Button
        android:id="@+id/button_skip"
        style="@style/underbutton"
        android:text="@string/skip_step" />

</RelativeLayout>