<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white">

    <!-- Welcome to anonymous Coronavirus check 👋 -->
    <TextView style="@style/intro_title"
        android:layout_width="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginRight="0dp"
        android:textSize="37sp"
        android:fontFamily="sans-serif-medium"
        android:id="@+id/welcome_to"/>

    <!-- Together we can save lives and help people keep their jobs -->
    <TextView
        style="@style/intro_subtitle"
        android:id="@+id/together_we"
        android:layout_width="262dp"
        android:text="@string/together_we"
        android:textAppearance="@style/splashscreen_subtitle"
        android:layout_below="@id/welcome_to"/>

    <!-- BUTTON -->
    <Button style="@style/button_primary"
        android:shadowColor="@color/white"
        android:id="@+id/button_next"
        android:text="@string/let_s_get_s" />

    <!-- UNDERBUTTON -->
    <Button
        android:id="@+id/how_it_works"
        style="@style/underbutton"
        android:text="@string/how_it_works" />


    <RelativeLayout
        android:id="@+id/rel_progbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/button_next">

        <TextView
            android:id="@+id/tv_progbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_progbar"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_progbar"
            android:layout_centerInParent="true"
            android:indeterminate="true" />

    </RelativeLayout>

</RelativeLayout>